--- a/MathFarm/Base.lproj/Main.storyboard
+++ b/MathFarm/Base.lproj/Main.storyboard
@@ -184,6 +184,11 @@
                                 <color key="backgroundColor" red="0.17408375130000001" green="1" blue="0.2175102682" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="43"/>
                                 <state key="normal" title="Easy"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <segue destination="cCr-Lp-LvR" kind="show" id="4Yg-OI-stg"/>
                                 </connections>
@@ -194,6 +199,11 @@
                                 <color key="backgroundColor" red="0.17408375130000001" green="1" blue="0.2175102682" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="43"/>
                                 <state key="normal" title="Medium"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pis-wW-gEw">
                                 <rect key="frame" x="77" y="502" width="273" height="90"/>
@@ -201,6 +211,21 @@
                                 <color key="backgroundColor" red="0.17408375130000001" green="1" blue="0.2175102682" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="43"/>
                                 <state key="normal" title="Hard"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hjr-Qp-TA9">
+                                <rect key="frame" x="20" y="20" width="76" height="61"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <accessibility key="accessibilityConfiguration" label="Double tap to go back"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <segue destination="fZs-Np-QL8" kind="show" id="DPg-em-XKj"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.82281726759999996" green="1" blue="0.99030350290000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -230,15 +255,19 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3HB-nA-PDa" userLabel="Empty Animal">
                                 <rect key="frame" x="648" y="491" width="139" height="144"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.82281726759999996" green="1" blue="0.99030350290000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" none="YES"/>
                                 </accessibility>
                                 <state key="normal" title="AnswerChoice2"/>
+                                <connections>
+                                    <action selector="selectAnswer1:" destination="cCr-Lp-LvR" eventType="touchUpInside" id="n3b-Qq-ZZ3"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zda-3d-wIn">
                                 <rect key="frame" x="20" y="20" width="76" height="61"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <accessibility key="accessibilityConfiguration" label="Double tap to go back"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <state key="normal" title="Back"/>
                                 <connections>
@@ -248,17 +277,24 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qEp-Kr-JlZ">
                                 <rect key="frame" x="892" y="683" width="97" height="55"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <accessibility key="accessibilityConfiguration" label="Douple tap to confirm your answer"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <state key="normal" title="Confirm"/>
+                                <connections>
+                                    <action selector="checkAnswer:" destination="cCr-Lp-LvR" eventType="touchUpInside" id="kdx-7P-Vn7"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QvS-Vt-oo6" userLabel="Empty Animal">
                                 <rect key="frame" x="409" y="491" width="139" height="144"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.82281726759999996" green="1" blue="0.99030350290000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" none="YES"/>
                                 </accessibility>
                                 <state key="normal" title="AnswerChoice1"/>
+                                <connections>
+                                    <action selector="selectAnswer0:" destination="cCr-Lp-LvR" eventType="touchUpInside" id="OTN-Hm-uAA"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TrR-dG-ElR" userLabel="Empty Animal">
                                 <rect key="frame" x="296" y="277" width="139" height="144"/>
@@ -276,22 +312,25 @@
                                 </accessibility>
                                 <state key="normal" title="No Animal"/>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RAi-Jr-hY7" userLabel="Empty Animal">
-                                <rect key="frame" x="734" y="277" width="139" height="144"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qcJ-0x-TaR" userLabel="Empty Animal">
+                                <rect key="frame" x="751" y="277" width="139" height="144"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <accessibility key="accessibilityConfiguration">
+                                <accessibility key="accessibilityConfiguration" label="Which animal comes next?">
                                     <accessibilityTraits key="traits" none="YES"/>
                                 </accessibility>
-                                <state key="normal" title="No Animal"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="1"/>
+                                <state key="normal" title="No Answer" backgroundImage="Unknown-2"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.82281726759999996" green="1" blue="0.99030350290000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="fgm-DY-fWs"/>
                     </view>
                     <connections>
+                        <outlet property="answerChoice0" destination="QvS-Vt-oo6" id="Zfc-6V-RKF"/>
+                        <outlet property="answerChoice1" destination="3HB-nA-PDa" id="T0b-Dc-MLa"/>
+                        <outlet property="answerSlot" destination="qcJ-0x-TaR" id="eX5-o2-8Yl"/>
                         <outlet property="firstAnimal" destination="TrR-dG-ElR" id="P26-KU-BTJ"/>
                         <outlet property="secondAnimal" destination="C8R-kH-EZL" id="OSE-gt-W06"/>
-                        <outlet property="thirdAnimal" destination="RAi-Jr-hY7" id="e8z-7w-yJq"/>
                         <outlet property="zeroAnimal" destination="iOX-yE-Iyg" id="s3L-nX-EfC"/>
                     </connections>
                 </viewController>
@@ -594,15 +633,16 @@
     </scenes>
     <resources>
         <image name="49-Free-Cartoon-Cow-Clip-Art" width="2827" height="3200"/>
+        <image name="Unknown-2" width="225" height="225"/>
         <image name="pig-308577_960_720" width="791" height="720"/>
         <image name="thumbs_cartoon-farm-vector1" width="436" height="300"/>
         <image name="thumbs_cartoon-farm-vector3" width="374" height="300"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="x1m-WK-pkG"/>
-        <segue reference="qHI-DS-ARz"/>
-        <segue reference="l4G-5f-0SA"/>
-        <segue reference="bes-H3-K88"/>
+        <segue reference="vZL-mQ-GRL"/>
+        <segue reference="fzS-xn-hgQ"/>
+        <segue reference="DPg-em-XKj"/>
         <segue reference="7Td-ot-7qX"/>
     </inferredMetricsTieBreakers>
 </document>
